SelectList: avoid long text overlapping caret (#235)

--- a/packages/syntax-core/src/SelectList/SelectList.module.css
+++ b/packages/syntax-core/src/SelectList/SelectList.module.css
@@ -30,7 +30,7 @@
   justify-content: space-between;
   margin: 0;
   outline: 0;
-  padding: 0 12px;
+  padding: 0 36px 0 12px;
   width: 100%;
 }
 
